--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -6,19 +6,19 @@
     android:id="@+id/nav_main">
     <or_tab_fragment
         android:id="@+id/navigation_home"
-        android:name="com.cdts.demo.ui.tab.view.HomeFragment"
+        android:name="com.cdts.demo.tab.view.HomeFragment"
         android:label="@string/home"
         tools:layout="@layout/fragment_home">
     </or_tab_fragment>
     <or_tab_fragment
         android:id="@+id/navigation_ui"
-        android:name="com.cdts.demo.ui.tab.view.UIFragment"
+        android:name="com.cdts.demo.tab.view.UIFragment"
         android:label="@string/ui"
         tools:layout="@layout/fragment_list_with_toolbar">
     </or_tab_fragment>
     <or_tab_fragment
         android:id="@+id/navigation_data"
-        android:name="com.cdts.demo.ui.tab.view.DataFragment"
+        android:name="com.cdts.demo.tab.view.DataFragment"
         android:label="@string/data"
         tools:layout="@layout/fragment_list_with_toolbar">
     </or_tab_fragment>
