--- a/app/src/main/res/layout/toolbar_webview_bottom.xml
+++ b/app/src/main/res/layout/toolbar_webview_bottom.xml
@@ -1,48 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="wrap_content"
+                                             android:padding="8dp">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbarWebViewBottom"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="@color/colorWhite">
+            android:id="@+id/toolbarWebViewBottom"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorWhite"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="?attr/actionBarTheme"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:titleTextColor="@color/colorWhite">
 
     </android.support.v7.widget.Toolbar>
 
-    <ImageView
-        android:id="@+id/toolbarBottomBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbarWebViewBottom"
-        app:layout_constraintEnd_toStartOf="@+id/toolbarBottomForward"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/toolbarWebViewBottom"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_nav_back" />
+    <View
+            android:id="@+id/anchor"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbarWebViewBottom"
+            app:layout_constraintTop_toTopOf="@+id/toolbarWebViewBottom"
+            app:layout_constraintEnd_toEndOf="@+id/toolbarWebViewBottom"
+            app:layout_constraintStart_toStartOf="@+id/toolbarWebViewBottom"
+            android:visibility="gone"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"/>
 
     <ImageView
-        android:id="@+id/toolbarBottomForward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbarWebViewBottom"
-        app:layout_constraintEnd_toStartOf="@+id/toolbarWebViewBottom"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/toolbarBottomBack"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_nav_forward" />
+            android:id="@+id/toolbarBottomBack"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="40dp"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbarWebViewBottom"
+            app:layout_constraintTop_toTopOf="@+id/toolbarWebViewBottom"
+            app:srcCompat="@drawable/ic_arrow_left"
+            app:layout_constraintEnd_toStartOf="@+id/anchor"/>
+
+    <ImageView
+            android:id="@+id/toolbarBottomForward"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="40dp"
+            app:layout_constraintBottom_toBottomOf="@+id/toolbarWebViewBottom"
+            app:layout_constraintTop_toTopOf="@+id/toolbarWebViewBottom"
+            app:srcCompat="@drawable/ic_arrow_right"
+            app:layout_constraintStart_toEndOf="@+id/anchor" />
 </android.support.constraint.ConstraintLayout>
