--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              android:id="@+id/mainContainer"
                                              android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:layout_height="0dp"
             app:navGraph="@navigation/nav_main"/>
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/mainNav"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimens_56"
@@ -31,4 +31,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/menu_main" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
