--- a/app/src/main/res/layout/toolbar_webview_bottom.xml
+++ b/app/src/main/res/layout/toolbar_webview_bottom.xml
@@ -5,7 +5,7 @@
                                              android:layout_height="wrap_content"
                                              android:padding="8dp">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarWebViewBottom"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -17,7 +17,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:titleTextColor="@color/colorWhite">
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <View
             android:id="@+id/anchor"
