--- a/oreo/src/main/res/layout/test_toolbar_title.xml
+++ b/oreo/src/main/res/layout/test_toolbar_title.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -28,6 +28,6 @@
                 tools:layout_editor_absoluteX="172dp"
                 tools:layout_editor_absoluteY="15dp" />
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
